Added DB management system